--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Reliance</string>
+    <string name="app_name">Navagis</string>
     <string name="label_email"><b>Email</b></string>
     <string name="label_password"><b>Password</b></string>
     <string name="title_asset_detail">Asset Detail</string>
